2013-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c,
	  More efficient calls to _Noreturn functions.

2013-01-28 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved finds of stack. Prints into
	  map the iRAM.

2013-01-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/z80/gen.c,
	  More efficient calls to _Noreturn functions.

2013-01-27 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Prints the map of RAM, list of bits and
	  start of stack.

2013-01-27 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables.

2013-01-26 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --recognize-jump-tables

2013-01-24 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --find-lost-labels

2013-01-23 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl:
	  New feature in "Public labels" section: (calls: ..., jumps: ...)
	  ("number of calls" and "number of jumps")

2013-01-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Bugfix and more proposal for use.

2013-01-20 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Additional informations about direction
          of the jumps.

2013-01-20 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: "Public variables" -> "Public labels"

2013-01-20 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved handling of blocks and
	  lists of labels and variables.

2013-01-19 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Expanded assembly mode and nicer tables.

2013-01-15 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libsdcc/long/modulong.c: