@@ -1,3 +1,7 @@
+2013-01-28 Molnar Karoly <molnarkaroly AT users.sf.net>
+
+	* support/scripts/mcs51-disasm.pl: New command option: --name-list
+
 2013-01-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/hc08/gen.c,
